use micro-rdk git not path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,8 @@ resolver = "2"
 rust-version = "1.83"
 
 [dependencies.micro-rdk]
-path = "../micro-rdk/micro-rdk"
-#git = "https://github.com/viamrobotics/micro-rdk.git"
-#version = "0.4.1-rc10"
-#rev = "v0.4.1-rc10"
+git = "https://github.com/viamrobotics/micro-rdk.git"
+version = "0.4.1-rc10"
 features = [
   "esp32"
 ]
