--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = "1.83"
 [dependencies.micro-rdk]
 git = "https://github.com/viamrobotics/micro-rdk.git"
 version = "0.4.1-rc10"
+rev = "v0.4.1-rc10"
 features = [
   "esp32"
 ]
